@@ -10,6 +10,15 @@ Features
 
 * Port browser:addMenuItem directive from zope.app.publisher.browser/meta.zcml
 
+Bugfixes
+--------
+
+* Add a file argument to the five:loadProducts and five:loadProductOverrides
+  directives. Use this in the Five site.zcml to load all the Product meta before
+  any Product configure. 
+  NOTE: Anyone who copied the Five site.zcml to their ${instance}/etc/ directory
+  is going to need to update it.
+
 Five 1.3 (unreleased)
 =====================
 
